ajout d'une activité pour visualiser les depenses du mois en fonctions de la catégories

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,12 @@
             android:exported="false">
 
         </activity>
+
+        <activity
+            android:name=".AffichageDetaillerDepenseActiviy"
+            android:exported="false">
+
+        </activity>
     </application>
 
 </manifest>
