--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,13 @@
             android:exported="false">
 
         </activity>
+
+
+        <activity
+            android:name=".ConnexionActivity"
+            android:exported="false">
+
+        </activity>
     </application>
 
 </manifest>
