creation nouvelle activité pour modifier sa dépense

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
 
         </activity>
 
+        <activity
+            android:name=".AffichageChangementDepenseActivity"
+            android:exported="false">
+        </activity>
 
         <activity
             android:name=".ConnexionActivity"
