fonction ajouter depense finit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
             android:exported="false">
 
         </activity>
+        <activity
+            android:name=".AjoutDepenseActivity"
+            android:exported="false">
+
+        </activity>
     </application>
 
 </manifest>
