chnagement de la page main en inscription + création du page home

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,12 @@
         </activity>
 
         <activity
+            android:name=".InscriptionActivity"
+            android:exported="false">
+
+        </activity>
+
+        <activity
             android:name=".AffichageDetaillerDepenseActiviy"
             android:exported="false">
 
